More whitespace fixes in the marked up code.  This seems to have solved most of the whitespace problems

--- a/console/console/view/static/style/console.css
+++ b/console/console/view/static/style/console.css
@@ -107,7 +107,8 @@ input.textbox {
     margin: 0;
 }
 
-#console_output .output span {
+#console_output .output span,
+#console_output div.statement pre span {
     white-space: pre;
 }
 
